--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
          <p>
            Sou um profissional dedicado, comunicativo e proativo, com mais de 30 anos de experiência em instituições com diversos propósitos, financeiro, comercial e industrial, nas Américas e na Europa.       
-           Há muito tempo trabalho como especialista em processos e soluções abrangentes, manutenção e desenvolvimento de aplicativos, controle de projetos, conversão e migração, consultoria para reestruturação organizacional, otimização e automação de processos, documentação organizacional e de
+           Há muito tempo trabalho como especialista em processos e soluções abrangentes, manutenção e desenvolvimento de aplicativos, controle de projetos, conversão e migração, consultoria para reestruturação organizacional, otimização e automação de processos, documentação organizacional e de e de sistemas, Data Warehouse, Business Intelligence.
          </p>
         </div>
       <article>
